syntax = "proto3";

package protos;

service Dispatcher {
    rpc get_task (TaskRequest) returns (TaskResponse);
    rpc fin_task (FinTaskRequest) returns (FinTaskResponse);
	
}


message TaskRequest {
	string topic = 1;
	string channel = 2;
    
}

message TaskResponse {
    bytes messageID = 1;
    bytes payload = 2;

}

enum TaskResult {
    FIN = 0;
    FAIL = 1;
  }

message FinTaskRequest {
	string topic = 1;
	string channel = 2;
    bytes messageID = 3;
    TaskResult result = 4;
    bytes payload = 5;
}

message FinTaskResponse {
	
}

